src/app/_styles/scss/_common.scss
/***************************

preloader

***************************/
.sb-preloader {
  width: 100%;
  height: 100vh;
  position: fixed;
  z-index: 99999999999999999;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: $tr-lg;

  & .sb-preloader-bg {
    box-shadow: 0 0 8px 0 rgba(0,0,0,.05);
    border-radius: 50%;
    position: absolute;
    background-color: $c5;
    height: 1000px;
    width: 1000px;
    top: 20%;
    transform: scale(2);
    transition: 0.6s ease-in-out;
  }

  & .sb-preloader-body {
    position: absolute;
    bottom: 0;
    z-index: 999;
    width: 100%;
    text-align: center;
    transition: $tr-lg;

    & .sb-loading {
      opacity: 0;
      font-size: 16px;
      font-weight: 400;
      margin-bottom: 30px;
    }

    & .sb-loading-bar {
      margin-bottom: 15px;
      width: 1px;
      height: 80vh;
      margin: 0 auto;
      border-radius: 2px;
      overflow: hidden;
      background-color: $c4;

      & .sb-bar {
        width: 100%;
        height: 0;
        background-color: $c1;
      }
    }
  }

  &.sb-hidden {
    pointer-events: none;
    transition-delay: 0.2s;

    & .sb-preloader-bg {
      transform: scale(0);
      transition-delay: 0.2s;
    }

    & .sb-preloader-body {
      transform: translateY(30%);
      opacity: 0;
      transition-delay: 0s;
    }
  }
}
/***************************

typography

***************************/
body {
  background-color: $c6;
  padding: 0;
  margin: 0;
  font-family: var(--font-bevnpro);
  letter-spacing: 0.03em;
  font-size: 16px;
  color: $c1;
}

*:focus {
  outline: inherit !important;
}

a {
  text-decoration: none;
  color: inherit;

  &:hover {
    text-decoration: none;
    color: inherit;
  }
}

hr {
  margin-top: 40px;
  margin-bottom: 30px;
}

ul {
  padding: 0;
  margin: 0;

  & li {
    list-style-type: none;
  }
}

.sb-text {
  color: $c5;
  margin: 0;
  font-size: 20px;
  // overflow: hidden;
  //     text-overflow: ellipsis;
  //     display: -moz-box;
  //     -moz-box-orient: vertical;
  //     display: -webkit-box;
  //     -webkit-line-clamp: 2;
  //     -webkit-box-orient: vertical;
  //     line-clamp: 2;
  //     box-orient: vertical;

  &.sb-text-xs {
    font-size: 14px;
  }

  &.sb-text-sm {
    font-size: 16px;
  }

  &.sb-text-lg {
    font-size: 18px;
  }
}

.sb-suptitle {
  display: inline-block;
  padding: 2px 5px;
  background-color: $c3;
  font-size: 12px;
  font-weight: 400;
  color: $c1;
}

.sb-h1,
.sb-h2,
.sb-h3,
.sb-h4,
.sb-h5,
.sb-h6,
h1,
h2,
h3,
h4,
h5,
h6,
h7 {
  font-family: var(--font-lodestone);
  letter-spacing: 1px !important;
  font-weight: 400;
  margin: 0;
  padding: 0;
}

b {
  letter-spacing: 1px !important;
}

span {
  font-family: var(--font-lodestone);
  letter-spacing: 1px;
}

.sb-h1,
h1 {
  line-height: 100%;
  font-size: 72px;
  letter-spacing: -3px;

  & span {
    background-color: $c6;
  }
}

.sb-h2,
h2 {
  line-height: 110%;
  font-size: 40px;
  letter-spacing: -2px;

  & span {
    background-color: $c6;
  }
}

.sb-h3,
h3 {
  line-height: 120%;
  font-size: 22px;
  letter-spacing: -1px;
}

.sb-h4,
h4 {
  line-height: 120%;
  font-size: 16px;
  letter-spacing: 0;
}

.sb-h5,
h5 {
  font-size: 14px;
  letter-spacing: 0;
}

.sb-title-lg {
  font-size: 100px;
}

.sb-ib-title-frame {
  display: flex;
  justify-content: space-between;
  align-items: center;

  & i {
    color: $c2;
    font-size: 10px;
    opacity: 0.5;
  }
}
@media (max-width: 768px) {
  .sb-h1,
  h1 {
    font-size: 54px;
    letter-spacing: -2px;
  }

  .sb-h2,
  h2 {
    font-size: 36px;
    letter-spacing: -1px;
  }

  .sb-h3,
  h3 {
    font-size: 20px;
    letter-spacing: -1px;
  }

  .sb-title-lg {
    font-size: 68px;
  }
}
@media (max-width: 450px) {
  .sb-h1,
  h1 {
    font-size: 46px;
  }

  .sb-h2,
  h2 {
    font-size: 28px;
  }

  .sb-h3,
  h3 {
    font-size: 18px;
  }
}

.sb-cate-title {
  font-size: 28px;
  letter-spacing: -1px;
}

.sb-signature {
  width: 160px;
}

.sb-404 {
  display: block;
  color: $c5;
  font-size: 56px;
  font-family: var(--font-monoton), cursive;
  margin-bottom: 10px;
}
/***************************

group title

***************************/
.sb-group-title {
  position: relative;
  z-index: 2;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;

  .sb-mid {
    margin-top: 30px;
    text-align: center !important;
    font-size: 60px;
    color: $c5;
  }

  & .sb-left {
    width: 50%;
  }

  & .sb-right {
    width: 50%;
    display: flex;
    justify-content: flex-end;
  }
}

.sb-reviews {
  background-color: $c7;
  .sb-btn {
    background-color: $c5;
    color: white;
  }
  .sb-review-card {
    background-color: $c2;
    border: 5px solid $c5;
    border-radius: 30px;
    padding: 10px 30px;
    .sb-text {
      color: $c1;
      overflow: visible;
      display: inline-block;
    }
  }
  .sb-group-title .sb-text {
    overflow: visible;
  }
  .sb-p-0-90 {
    padding-bottom: 0 !important;
  }
  .swiper {
    margin-bottom: 30px;
  }
  .sb-bg-2 div:after {
    display: none;
  }
}

.sb-short-menu {
  background-color: $c7;
  .sb-btn {
    background-color: $c5;
    color: white;
  }
}
@media (max-width: 768px) {
  .sb-group-title {
    // flex-direction: column;

    // & .sb-left {
    //   width: 100%;
    // }

    // & .sb-right {
    //   width: 100%;
    //   justify-content: space-between;
    // }
        & .sb-left,
        & .sb-right {
          flex: 0 0 100%;
          max-width: 100%;
          width: 100%;
        }
    
        & .sb-left {
          text-align: center;
          margin-bottom: 30px;
        }
    
        & .sb-right {
          justify-content: center;
        }
  }
}
/* ... */

